# sampleboard

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.android.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.gui.yml  docker-compose.prod.yml  docker-compose.web.yml  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  roadmap.md  specifications.md  svelte.config.js  tsconfig.json  tsconfig.node.json  vite-plugin-factory-samples.ts  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: doc-sync.sh  tests-gate.sh
.github/workflows/: pages.yml
doc/: README.md  audio-editor.md  audio-engine.md  audit-foss.md  bibliotheque-import.md  coeur-jeu.md  development.md  docker-environment.md  editeur-audio.md  editing.md  edition.md  environnement-docker.md  factory-samples.md  foss-audit.md  interface.md  library-import.md  moteur-audio.md  persistance-reglages.md  persistence-settings.md  playable-core.md  samples-usine.md  tests.md  web-distribution.md
docker/: Dockerfile  entrypoint.sh
docker/wasm/: Dockerfile  Dockerfile.libarchive
docker/web/: Dockerfile  nginx.conf
e2e/: audio-editor.spec.ts  encoder-duration.spec.ts  factory-seed.spec.ts  helpers.ts  import.spec.ts  library-tags.spec.ts  pad-cue.spec.ts  play.spec.ts  screenshots.fastlane.spec.ts  web-persistence.spec.ts
public/: manifest.webmanifest
public/factory-samples/: README.md  manifest.json
scripts/: build-libarchive-wasm.sh  build-opus-wasm.sh  freesound-rebank.mjs  freesound-worklist.json
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: bank-factory.ts  commands.ts  create-app.ts  default-bank.ts  dev-seed.ts  factory-seed.ts  maintenance.ts  navigation.ts  persistence.ts  preload.ts  router.ts  selection-history.ts  (+3 more)
(+116 files in other folders)
